# genurl

./: README.md  pyproject.toml  urls.txt
genurl/: genurl.py
tests/: test_genurl.py
