[tool.poetry]
name = "genurl"
version = "0.1.0"
description = ""
authors = ["Sam Havens <sam.havens@qordoba.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
